# backend/jvm/webapi/src/main/kotlin/pt/isel/leic/ps/qless/webapi/controllers/CategoriesApiController.kt
@@ -5,34 +5,39 @@ import io.swagger.v3.oas.annotations.enums.*
 import io.swagger.v3.oas.annotations.media.*
 import io.swagger.v3.oas.annotations.responses.*
 import io.swagger.v3.oas.annotations.security.*
-import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.validation.annotation.Validated
 import org.springframework.web.bind.annotation.*
 import pt.isel.leic.ps.qless.webapi.models.Category
 import pt.isel.leic.ps.qless.webapi.models.CategoryPost
+import pt.isel.leic.ps.qless.webapi.services.CategoriesApiService
 import javax.validation.Valid
 
 @RestController
 @Validated
 @RequestMapping("\${api.base-path:}")
-class CategoriesApiController() {
+class CategoriesApiController(private val categoriesApiService: CategoriesApiService) {
 
     @Operation(
-        summary = "",
-        operationId = "createCategory",
-        description = """Add a new Category""",
-        responses = [
-            ApiResponse(responseCode = "200", description = "OK", content = [Content(schema = Schema(implementation = CategoryPost::class))]) ],
-        security = [ SecurityRequirement(name = "basicAuth") ]
+            summary = "",
+            operationId = "createCategory",
+            description = """Add a new Category""",
+            responses = [
+                ApiResponse(responseCode = "200", description = "OK", content = [Content(schema = Schema(implementation = Category::class))]) ],
+            security = [ SecurityRequirement(name = "basicAuth") ]
     )
     @RequestMapping(
-        method = [RequestMethod.POST],
-        value = ["/categories"],
-        produces = ["application/json"]
+            method = [RequestMethod.POST],
+            value = ["/categories"],
+            produces = ["application/json"],
+            consumes = ["application/json"]
     )
-    fun createCategory(): ResponseEntity<CategoryPost> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun createCategory(
+            @Parameter(description = "Team object to be updated")
+            @Valid
+            @RequestBody(required = false)
+            categoryPost: CategoryPost?): ResponseEntity<Category> {
+        return ResponseEntity.ok(categoriesApiService.createCategory(categoryPost!!))
     }
 
     @Operation(
@@ -47,8 +52,11 @@ class CategoriesApiController() {
         method = [RequestMethod.DELETE],
         value = ["/categories/{categoryId}"]
     )
-    fun deleteCategoryById(@Parameter(description = "ID of category to retrieve", required = true) @PathVariable("categoryId") categoryId: java.util.UUID): ResponseEntity<Unit> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun deleteCategoryById(
+            @Parameter(description = "ID of category to retrieve", required = true)
+            @PathVariable("categoryId")
+            categoryId: java.util.UUID): ResponseEntity<Unit> {
+        return ResponseEntity.ok(categoriesApiService.deleteCategoryById(categoryId))
     }
 
     @Operation(
@@ -65,7 +73,7 @@ class CategoriesApiController() {
         produces = ["application/json"]
     )
     fun getAllCategories(): ResponseEntity<List<Category>> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        return ResponseEntity.ok(categoriesApiService.getAllCategories())
     }
 
     @Operation(
@@ -81,8 +89,11 @@ class CategoriesApiController() {
         value = ["/categories/{categoryId}"],
         produces = ["application/json"]
     )
-    fun getCategoryById(@Parameter(description = "ID of category to retrieve", required = true) @PathVariable("categoryId") categoryId: java.util.UUID): ResponseEntity<Category> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun getCategoryById(
+            @Parameter(description = "ID of category to retrieve", required = true)
+            @PathVariable("categoryId")
+            categoryId: java.util.UUID): ResponseEntity<Category> {
+        return ResponseEntity.ok(categoriesApiService.getCategoryById(categoryId))
     }
 
     @Operation(
@@ -99,7 +110,14 @@ class CategoriesApiController() {
         produces = ["application/json"],
         consumes = ["application/json"]
     )
-    fun updateCategoryById(@Parameter(description = "ID of category to retrieve", required = true) @PathVariable("categoryId") categoryId: java.util.UUID,@Parameter(description = "Category object to be updated") @Valid @RequestBody(required = false) category: Category?): ResponseEntity<Category> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun updateCategoryById(
+            @Parameter(description = "ID of category to retrieve", required = true)
+            @PathVariable("categoryId")
+            categoryId: java.util.UUID,
+            @Parameter(description = "Category object to be updated")
+            @Valid
+            @RequestBody(required = false)
+            category: Category?): ResponseEntity<Category> {
+        return ResponseEntity.ok(categoriesApiService.updateCategoryById(categoryId, category!!))
     }
 }
