# backend/jvm/webapi/src/main/kotlin/pt/isel/leic/ps/qless/webapi/controllers/TeamsApiController.kt
@@ -5,34 +5,39 @@ import io.swagger.v3.oas.annotations.enums.*
 import io.swagger.v3.oas.annotations.media.*
 import io.swagger.v3.oas.annotations.responses.*
 import io.swagger.v3.oas.annotations.security.*
-import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.validation.annotation.Validated
 import org.springframework.web.bind.annotation.*
 import pt.isel.leic.ps.qless.webapi.models.Team
 import pt.isel.leic.ps.qless.webapi.models.TeamPost
+import pt.isel.leic.ps.qless.webapi.services.TeamsApiService
 import javax.validation.Valid
 
 @RestController
 @Validated
 @RequestMapping("\${api.base-path:}")
-class TeamsApiController() {
+class TeamsApiController(private val teamsApiService: TeamsApiService) {
 
     @Operation(
-        summary = "",
-        operationId = "createTeam",
-        description = """Add a new team""",
-        responses = [
-            ApiResponse(responseCode = "200", description = "OK", content = [Content(schema = Schema(implementation = TeamPost::class))]) ],
-        security = [ SecurityRequirement(name = "basicAuth") ]
+            summary = "",
+            operationId = "createTeam",
+            description = """Add a new team""",
+            responses = [
+                ApiResponse(responseCode = "200", description = "OK", content = [Content(schema = Schema(implementation = Team::class))]) ],
+            security = [ SecurityRequirement(name = "basicAuth") ]
     )
     @RequestMapping(
-        method = [RequestMethod.POST],
-        value = ["/teams"],
-        produces = ["application/json"]
+            method = [RequestMethod.POST],
+            value = ["/teams"],
+            produces = ["application/json"],
+            consumes = ["application/json"]
     )
-    fun createTeam(): ResponseEntity<TeamPost> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun createTeam(
+            @Parameter(description = "Team object to be created")
+            @Valid
+            @RequestBody(required = false)
+            teamPost: TeamPost?): ResponseEntity<Team> {
+        return ResponseEntity.ok(teamsApiService.createTeam(teamPost!!))
     }
 
     @Operation(
@@ -46,8 +51,11 @@ class TeamsApiController() {
         method = [RequestMethod.DELETE],
         value = ["/teams/{teamId}"]
     )
-    fun deleteTeamById(@Parameter(description = "ID of team to retrieve", required = true) @PathVariable("teamId") teamId: java.util.UUID): ResponseEntity<Unit> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun deleteTeamById(
+            @Parameter(description = "ID of team to retrieve", required = true)
+            @PathVariable("teamId") teamId: java.util.UUID):
+            ResponseEntity<Unit> {
+        return ResponseEntity.ok(teamsApiService.deleteTeamById(teamId))
     }
 
     @Operation(
@@ -64,7 +72,7 @@ class TeamsApiController() {
         produces = ["application/json"]
     )
     fun getAllTeams(): ResponseEntity<List<Team>> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+        return ResponseEntity.ok(teamsApiService.getAllTeams())
     }
 
     @Operation(
@@ -79,8 +87,11 @@ class TeamsApiController() {
         value = ["/teams/{teamId}"],
         produces = ["application/json"]
     )
-    fun getTeamById(@Parameter(description = "ID of team to retrieve", required = true) @PathVariable("teamId") teamId: java.util.UUID): ResponseEntity<Team> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun getTeamById(
+            @Parameter(description = "ID of team to retrieve", required = true)
+            @PathVariable("teamId")
+            teamId: java.util.UUID): ResponseEntity<Team> {
+        return ResponseEntity.ok(teamsApiService.getTeamById(teamId))
     }
 
     @Operation(
@@ -96,7 +107,14 @@ class TeamsApiController() {
         produces = ["application/json"],
         consumes = ["application/json"]
     )
-    fun updateTeamById(@Parameter(description = "ID of team to retrieve", required = true) @PathVariable("teamId") teamId: java.util.UUID,@Parameter(description = "Team object to be updated") @Valid @RequestBody(required = false) team: Team?): ResponseEntity<Team> {
-        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    fun updateTeamById(
+            @Parameter(description = "ID of team to retrieve", required = true)
+            @PathVariable("teamId")
+            teamId: java.util.UUID,
+            @Parameter(description = "Team object to be updated")
+            @Valid
+            @RequestBody(required = false)
+            team: Team?): ResponseEntity<Team> {
+        return ResponseEntity.ok(teamsApiService.updateTeamById(teamId, team!!))
     }
 }
